--- a/.xvimrc
+++ b/.xvimrc
@@ -5,11 +5,23 @@
 " 	:xccmd		call xcode command
 """"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 
+""""""""""""""""""""""""""""""" H1 - Samples & Inbox
+" Sample: map key for xcode functions/commands
+" Map <space>b to toggle a breakpoint at the current line
+"nmap <space>b :xccmd toggleBreakpointAtCurrentLine<CR>
+" Use <space>cm to toggle comments for the selection
+"nmap <space>cm :xccmd commentAndUncommentCurrentLines<CR>
+"
 """"""""""""""""""""""""""""""" H1 - Pre-Check
 "if exists('loaded_settings_of_stico')
 "    finish
 "endif
 "let loaded_settings_of_stico = 1
+
+""""""""""""""""""""""""""""""" H1 - TODO: test if works
+"" y in visual mode also copy to clipboard
+"vnoremap y "+y
+"vnoremap d "+d
 
 """"""""""""""""""""""""""""""" H1 - Settings - Search
 set hlsearch
@@ -32,37 +44,19 @@ nnoremap <Space> i<Space><Esc>
 "" delete by words
 inoremap <C-Del> <Esc>ldwi
 inoremap <C-Backspace> <Esc>ldbi
-"noremap <C-Left> b
-"noremap <C-Right> w
-"
-"
+noremap <C-Left> b
+noremap <C-Right> w
 "" visual selection
-"nnoremap <S-Right> vl
-""nnoremap <C-S-Right> ve
-"nnoremap <S-Left> lvh
-""nnoremap <C-S-Left> lvb
-"inoremap <S-Right> <ESC>lvl
-""inoremap <C-S-Right> <ESC>lve
-"inoremap <S-Left> <ESC>lvh
-""inoremap <C-S-Left> <ESC>lvb
-"vnoremap <S-Right> l
-""vnoremap <C-S-Right> e
-"vnoremap <S-Left> h
-""vnoremap <C-S-Left> b
-"" y in visual mode also copy to clipboard
-"vnoremap y "+y
-"vnoremap d "+d
-
-""""""""""""""""""""""""""""""" H1 - Samples & Inbox
-" Sample: map key for xcode functions/commands
-" Map <space>b to toggle a breakpoint at the current line
-"nmap <space>b :xccmd toggleBreakpointAtCurrentLine<CR>
-" Use <space>cm to toggle comments for the selection
-"nmap <space>cm :xccmd commentAndUncommentCurrentLines<CR>
+vnoremap <S-Left> h
+vnoremap <S-Right> l
+nnoremap <S-Left> lvh
+nnoremap <S-Right> vl
+inoremap <S-Left> <ESC>lvh
+inoremap <S-Right> <ESC>lvl
 "
 "
 "
-" TODO: to sort
+" TODO: to sort, suff in .vimrc
 "
 """"""""""""""""""""""""""""""" H1 - 
 "set nocompatible		" This might reset some settings (e.g. "iskeyword"), so should happen in the beginning. 
@@ -131,14 +125,6 @@ inoremap <C-Backspace> <Esc>ldbi
 ""	set imactivatekey=S-C-space
 ""	inoremap <ESC> <ESC>:set iminsert=0<CR>
 ""endif
-"
-""""""""""""""""""""""""""""""" H1 - Syntax
-"syntax on						" switch syntax highlighting on
-"if has('gui_running')
-"    set background=light
-"else
-"    set background=dark
-"endif
 "
 """"""""""""""""""""""""""""""" H1 - Plugins
 """"""""" Pathogen
@@ -628,156 +614,3 @@ inoremap <C-Backspace> <Esc>ldbi
 "  "return a:str
 "endfunction
 "call MapAction('CopyToClipboard','my')
-"
-"""" copied from vimrc_example.vim, see comments there
-"if has("autocmd") && !exists("autocommands_loaded")
-"	let autocommands_loaded = 1
-"	" add to a group, and clean the previous cmds
-"	augroup vimrcEx							
-"		au!
-"		" goto the last position last edit before quit
-"		autocmd BufReadPost * if line("'\"") > 0 && line("'\"") <= line("$") | exe "normal! g`\"" | endif
-"	augroup END
-"endif
-"
-"" Deprecated - cmd g*/g# already did this
-"" the vim's * add word boundary, usually I prefer not
-""nnoremap * :call SearchCurrentWordWithoutBoundary()<CR>n
-""function! SearchCurrentWordWithoutBoundary()
-""	let @/ = '\V'.escape(expand('<cword>'), '\')
-""endfunction
-""
-""""""""""""""""""""""""""""""" H1 - Mapping - FileType based mapping
-"function! NoteOutline()
-"	call setloclist(0, [])
-"	let save_cursor = getpos(".")
-"
-"	call cursor(1, 1)
-"	let flags = 'cW'
-"	let file = expand('%')
-"	"while search("^\t*[^ \t]\+$", flags) > 0					" NOT works, why?
-"	"while search("^[[:space:]]*[-_\.[:alnum:]]\+[[:space:]]*$", flags) > 0		" NOT works, since vim not fully support POSIX regex syntax
-"	"while search("^\t*[^ \t][^ \t]*$", flags) > 0					" works, but all Chinese becomes outline
-"	while search("^\t*[-_a-z0-9\/\.][-_a-z0-9\/\.]*[\t ]*$", flags) > 0		" works, but a bit strict
-"		let flags = 'W'
-"		let title = substitute(getline('.'), '[ \t]*$', '', '')			" remove trailing blanks
-"		let titleToShow = substitute(title, '\t', '........', 'g')		" quickfix window removes any preceding blanks
-"		if titleToShow !~ "^\\." 
-"			let blank = printf('%s:%d:%s', file, line('.'), "  ")
-"			laddexpr blank
-"		endif
-"		let msg = printf('%s:%d:%s', file, line('.'), titleToShow)
-"		laddexpr msg
-"	endwhile
-"
-"	call setpos('.', save_cursor)
-"	vertical lopen
-"	vertical resize 40
-"
-"	" hide filename and line number in quickfix window, not sure how it works yet.
-"	set conceallevel=2 concealcursor=nc
-"	syntax match qfFileName /^.*| / transparent conceal
-"	"syntax match qfFileName /^[^|]*/ transparent conceal
-"endfunction
-"nnoremap <silent> mo :<C-U>call NoteOutline()<CR>
-"
-"" Works for "[Quickfix List]": keep cursor in quickfix window and show content above 
-"" Works for "[Location List]": jump to corresponding location (loc window closed). (how it works?)
-"au FileType qf nmap <buffer> <esc> :close<cr>
-"au FileType qf nmap <buffer> <cr> <cr>zz<c-w><c-p>
-"" Deprecated by above lines
-"""autocmd BufWinEnter quickfix silent! nnoremap <ESC> :q<CR>
-"""autocmd BufWinEnter quickfix silent! exec "unmap <CR>" | exec "nnoremap <CR> <CR>:bd ". g:qfix_win . "<CR>zt"	" seems not need delete the buffer anymore (because of what? vim updates? plugin updates?)
-""autocmd BufWinEnter "Location List" let g:qfix_win = bufnr("$")
-""autocmd BufWinEnter "Location List" silent! nnoremap <ESC> :exec "bd " . g:qfix_win<CR>
-""autocmd BufWinEnter "Location List" silent! exec "unmap <CR>" | exec "nnoremap <CR> <CR>zt"
-""autocmd BufLeave * if exists("g:qfix_win") && expand("<abuf>") == g:qfix_win | unlet! g:qfix_win | exec "unmap <ESC>" | exec "nnoremap <CR> o<Esc>" | endif
-""autocmd BufWinLeave * if exists("g:qfix_win") && expand("<abuf>") == g:qfix_win | unlet! g:qfix_win | exec "unmap <ESC>" | exec "nnoremap <CR> o<Esc>" | endif	" use BufLeave, seems BufWinLeave NOT triggered when hit <Enter> in outline(quickfix) window
-"
-""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
-"" SETTING CANDIDATE "  
-""""""""""""""""""""""
-"" show the diff between current buffer and the original loaded content
-"if !exists(":DiffOrig")
-"  command DiffOrig vert new | set bt=nofile | r # | 0d_ | diffthis 
-"  	\ | wincmd p | diffthis
-"endif
-"" In many terminal emulators the mouse works just fine, thus enable it.
-"if has('mouse')
-"  set mouse=a
-"endif
-"
-""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
-"" Deprecated
-""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
-""	" Deprecated as used vim-colors-solarized
-""	set diffopt=filler,iwhite,context:1000,vertical
-""	hi DiffAdd	guibg=#DDDDFF guifg=#993333 gui=none	" for added lines
-""	hi DiffDelete	guibg=#DDDDFF guifg=#993333 gui=none	" for delete lines
-""	hi DiffChange	guibg=#EEEEFF guifg=Gray gui=none	" for identical text in changed lines
-""	hi DiffText	guibg=#DDDDFF guifg=#993333 gui=none	" for different text in changed lines
-""	"hi Normal guibg=grey90					" seem could use num to specify color level?
-""
-""	"au BufEnter <buffer> hi Comment	ctermfg=DarkGrey guifg=DarkGrey		" need this way to override the hi defined by filetype specifiy one
-""	"au FileType *	hi Comment	cterm=italic ctermfg=DarkCyan gui=italic guifg=DarkCyan " seems better than line above, as could match filetype  
-""	au FileType *	hi Comment	ctermbg=Grey ctermfg=DarkCyan guibg=LightGrey guifg=DarkCyan " seems better than line above, as could match filetype  
-""
-""Deprecated as moved the logic into bash function
-""command! -nargs=* RInCmd		:wa | :silent	! cmd.exe		<args> "%:p" & pause
-""command! -nargs=* RInBash		:wa | :silent	! bash			<args> "%:p" & pause
-""command! -nargs=* RInRuby               :wa |		! bundle exec ruby	<args> "%:p"
-""command! -nargs=* RInPython		:wa | :silent	! python		<args> "%:p" & pause
-""command! -nargs=* RInGroovy		:wa | :silent	! groovy		<args> "%:p" & pause
-""autocmd Filetype sh map <buffer> <F11> :RInBash<Enter>
-""autocmd Filetype ruby map <buffer> <F11> :RInRuby<Enter>
-""autocmd Filetype groovy map <buffer> <F11> :RInGroovy<Enter>
-""autocmd Filetype python map <buffer> <F11> :RInPython<Enter>
-""autocmd Filetype dosbatch map <buffer> <F11> :RInCmd<Enter>
-"
-"
-"" Since 7.3, not work anymore
-"""" Some settings on diff, not really understand
-""set diffexpr=MyDiff()
-""function MyDiff()
-""  let opt = '-a --binary '
-""  if &diffopt =~ 'icase' | let opt = opt . '-i ' | endif
-""  if &diffopt =~ 'iwhite' | let opt = opt . '-b ' | endif
-""  let arg1 = v:fname_in
-""  if arg1 =~ ' ' | let arg1 = '"' . arg1 . '"' | endif
-""  let arg2 = v:fname_new
-""  if arg2 =~ ' ' | let arg2 = '"' . arg2 . '"' | endif
-""  let arg3 = v:fname_out
-""  if arg3 =~ ' ' | let arg3 = '"' . arg3 . '"' | endif
-""  let eq = ''
-""  if $VIMRUNTIME =~ ' '
-""    if &sh =~ '\<cmd'
-""      let cmd = '""' . $VIMRUNTIME . '\diff"'
-""      let eq = '"'
-""    else
-""      let cmd = substitute($VIMRUNTIME, ' ', '" ', '') . '\diff"'
-""    endif
-""  else
-""    let cmd = $VIMRUNTIME . '\diff'
-""  endif
-""  silent execute '!' . cmd . ' ' . opt . arg1 . ' ' . arg2 . ' > ' . arg3 . eq
-""endfunction
-""
-"" WINDOWNS map: Some win behavior seems not really used
-"" backspace in Visual mode deletes selection
-""vnoremap <BS> d
-"" CTRL-Z is Undo; not in cmdline though
-""noremap <C-Z> u
-""inoremap <C-Z> <C-O>u
-"" CTRL-F4 is Close window
-""noremap <C-F4> <C-W>c
-""inoremap <C-F4> <C-O><C-W>c
-""cnoremap <C-F4> <C-C><C-W>c
-""onoremap <C-F4> <C-C><C-W>c
-"" Select all, BUT seems the orginal increment is more useful
-""noremap <C-A> gggH<C-O>G		
-""inoremap <C-A> <C-O>gg<C-O>gH<C-O>G
-""cnoremap <C-A> <C-C>gggH<C-O>G
-""onoremap <C-A> <C-C>gggH<C-O>G
-""snoremap <C-A> <C-C>gggH<C-O>G
-""xnoremap <C-A> <C-C>ggVG
-"
