--- a/.msmtprc
+++ b/.msmtprc
@@ -2,7 +2,7 @@
 defaults
 #tls off
 #tls_trust_file ~/msmtp/ca-certificates.crt
-logfile ~/msmtp/msmtplog
+logfile /tmp/msmtplog
 
 # Chinaduo service
 account myenv_notify
