--- a/.myenv/conf/iterm2/com.googlecode.iterm2.plist
+++ b/.myenv/conf/iterm2/com.googlecode.iterm2.plist
@@ -645,11 +645,11 @@
 	<key>Hotkey</key>
 	<true/>
 	<key>HotkeyChar</key>
-	<integer>88</integer>
+	<integer>120</integer>
 	<key>HotkeyCode</key>
 	<integer>7</integer>
 	<key>HotkeyModifiers</key>
-	<integer>393475</integer>
+	<integer>1310985</integer>
 	<key>IRMemory</key>
 	<integer>4</integer>
 	<key>JobName</key>
@@ -688,9 +688,9 @@
 	<key>NSTableView Sort Ordering KeyBingingTable</key>
 	<array/>
 	<key>NSWindow Frame Preferences</key>
-	<string>139 238 924 485 0 0 1280 777 </string>
+	<string>139 257 924 485 0 0 1280 800 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 66 1277 711 0 0 1280 777 </string>
+	<string>131 73 650 498 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -1481,10 +1481,12 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-02-08T13:49:08Z</date>
+	<date>2015-03-10T03:15:57Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
+	<true/>
+	<key>ShowFullScreenTabBar</key>
 	<true/>
 	<key>ShowPaneTitles</key>
 	<false/>
@@ -1523,6 +1525,6 @@
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
-	<string>2.0.0.20141103</string>
+	<string>2.0</string>
 </dict>
 </plist>
