--- a/.myenv/conf/iterm2/com.googlecode.iterm2.plist
+++ b/.myenv/conf/iterm2/com.googlecode.iterm2.plist
@@ -643,7 +643,7 @@
 	<key>HotKeyTogglesWindow</key>
 	<false/>
 	<key>Hotkey</key>
-	<true/>
+	<false/>
 	<key>HotkeyChar</key>
 	<integer>120</integer>
 	<key>HotkeyCode</key>
@@ -688,9 +688,9 @@
 	<key>NSTableView Sort Ordering KeyBingingTable</key>
 	<array/>
 	<key>NSWindow Frame Preferences</key>
-	<string>139 257 924 485 0 0 1280 800 </string>
+	<string>139 238 924 485 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>131 73 650 498 0 0 1280 777 </string>
+	<string>4 9 1258 768 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -1481,7 +1481,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-03-10T03:15:57Z</date>
+	<date>2015-03-27T03:30:05Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1495,7 +1495,7 @@
 	<key>SplitPaneDimmingAmount</key>
 	<real>0.40000000596046448</real>
 	<key>SwitchTabModifier</key>
-	<integer>4</integer>
+	<integer>5</integer>
 	<key>SwitchWindowModifier</key>
 	<integer>6</integer>
 	<key>TabViewType</key>
