1st version of func_dist_via_jump, seems still need improve

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 # IGNORE, for secure reason
 /.ssh/
 /.hgrc
-/.subversion/
 /.myenv/secu/
+/.myenv/dist/
+/.subversion/
 /.smbcredentials
 
 # INCLUDE: config files
