--- a/.iterm2/com.googlecode.iterm2.plist
+++ b/.iterm2/com.googlecode.iterm2.plist
@@ -645,10 +645,17 @@
 	</data>
 	<key>NSTableView Supports v2 KeyBingingTable</key>
 	<true/>
+	<key>NSUserKeyEquivalents</key>
+	<dict>
+		<key>Toggle Full Screen</key>
+		<string>@^$]</string>
+	</dict>
+	<key>NSWindow Frame SUUpdateAlert</key>
+	<string>530 476 620 392 0 0 1680 1027 </string>
 	<key>NSWindow Frame SharedPreferences</key>
 	<string>269 65 918 492 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 0 1680 1027 0 0 1680 1027 </string>
+	<string>33 1080 1680 1027 -139 1050 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>629 455 570 452 0 0 1680 1027 </string>
 	<key>New Bookmarks</key>
@@ -1383,8 +1390,25 @@
 	<true/>
 	<key>NoSyncInstallationId</key>
 	<string>24FE1B09-77FB-4F95-815B-CB013D6E00C9</string>
+	<key>NoSyncLastTipTime</key>
+	<real>544722776.85289204</real>
+	<key>NoSyncPermissionToShowTip</key>
+	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>543519170.51609504</real>
+	<key>NoSyncTipsDisabled</key>
+	<true/>
+	<key>NoSyncTipsToNotShow</key>
+	<array>
+		<string>000</string>
+		<string>0000</string>
+		<string>0001</string>
+		<string>0002</string>
+		<string>0003</string>
+		<string>0004</string>
+		<string>0005</string>
+		<string>0006</string>
+	</array>
 	<key>OnlyWhenMoreTabs</key>
 	<true/>
 	<key>OpenArrangementAtStartup</key>
@@ -1451,7 +1475,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-03-29T07:35:21Z</date>
+	<date>2018-04-28T08:41:39Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
@@ -1498,10 +1522,12 @@
 	<string>/-+\~_.</string>
 	<key>findIgnoreCase_iTerm</key>
 	<true/>
+	<key>findMode_iTerm</key>
+	<integer>0</integer>
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.1.5</string>
+	<string>3.1.6</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>0</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
