update from lapmac2

--- a/.iterm2/com.googlecode.iterm2.plist
+++ b/.iterm2/com.googlecode.iterm2.plist
@@ -657,9 +657,9 @@
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>130 1176 606 469 -139 1050 1920 1057 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>393 452 958 470 0 0 1680 1027 </string>
+	<string>393 452 796 486 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>66 1076 1680 1027 -139 1050 1920 1057 </string>
+	<string>107 1080 1680 1027 -139 1050 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>629 455 570 452 0 0 1680 1027 </string>
 	<key>New Bookmarks</key>
@@ -1421,6 +1421,8 @@
 	<false/>
 	<key>OpenTmuxWindowsIn</key>
 	<integer>0</integer>
+	<key>PMPrintingExpandedStateForPrint2</key>
+	<false/>
 	<key>PassOnControlClick</key>
 	<false/>
 	<key>PasteFromClipboard</key>
@@ -1462,6 +1464,8 @@
 	</dict>
 	<key>PrefsCustomFolder</key>
 	<string>~/.iterm2/</string>
+	<key>Print In Black And White</key>
+	<true/>
 	<key>PromptOnQuit</key>
 	<true/>
 	<key>QuitWhenAllWindowsClosed</key>
@@ -1479,7 +1483,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-11-27T09:52:02Z</date>
+	<date>2019-05-29T08:00:45Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
@@ -1533,7 +1537,7 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.2.5</string>
+	<string>3.2.9</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>0</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
