update from lapmac2

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 !/.xmodmaprc
 !/.vrapperrc
 !/.tmux.conf
+!/.gitconfig
+!/.gitconfig.dw
+!/.gitconfig.me
 !/.gitignore
 !/.gitignore_global
 !/.dir_colors
