--- a/.vrapperrc
+++ b/.vrapperrc
@@ -1,6 +1,10 @@
 " This is for eclipse plugin, vrapper, which support vim motion in eclipse
 " NOTE, you might need put a link in C:\User\ouyangzhu, even the $HOME is set
 
+" TODO: map C-V to C-Q
+" TODO: map Y as "copy to end", instead of whole line
+
+"""""""""""""""""""""""""""""" Misc - Settings """""""""""""""""""""""""""""" 
 set ignorecase
 set smartcase
 set smartindent
@@ -14,9 +18,26 @@ set saney		" Y will yank to line end, not whole line
 set visualmouse		" auto enter visual mode when mouse select
 set autochdir		" help for :e command to edit files
 
+"""""""""""""""""""""""""""""" Misc - Mappings """""""""""""""""""""""""""""" 
+" Already Works
+" - C-W: (delete back word) in insert mode already works
+" - C-N: simple completion, BUT can NOT show the dialog
 nmap <Enter> o<Esc>
 nmap <Space> i<Space><Esc>
 nmap <C-q> <C-V>
 
+"""""""""""""""""""""""""""""" CMD Liine Motion """""""""""""""""""""""""""""" 
+inoremap <C-K> <Up>
+inoremap <C-J> <Down>
+inoremap <C-B> <Left>
+inoremap <C-F> <Right>
+
+inoremap <C-D> <Del>		" seems eclipse used, unmap in eclipse first
+inoremap <C-E> <End>		" seems eclipse used, unmap in eclipse first
+inoremap <C-A> <Home>		" seems eclipse used, unmap in eclipse first
+inoremap <C-H> <C-Left>		" seems eclipse used, unmap in eclipse first
+inoremap <C-L> <C-Right>	" seems eclipse used, unmap in eclipse first
+
+"""""""""""""""""""""""""""""" Deprecated """""""""""""""""""""""""""""" 
 "set relativenumber	" use this feature via install plugin "relative line number ruler", find it in eclipse marketplace
 
