--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,8 @@
 [user]
-	name = ouyzhu
-	email = ouyzhu@gmail.com
+	#name = ouyzhu
+	#email = ouyzhu@gmail.com
+	name = ouyangzhu
+	email = ouyangzhu@yy.com
 [push]
 	default = simple
 
