--- a/.gitignore
+++ b/.gitignore
@@ -40,11 +40,14 @@
 !/.gitattributes
 !/.config/ghorg/conf.yaml
 
+# INCLUDE: DIR: with exception (secure reason)
+!/.myenv/
+!/.myenv/*
+/.myenv/myenv_secu.sh
+
 # INCLUDE: DIR: need 2 line for each dir
 !/.fonts/
 !/.fonts/*
-!/.myenv/
-!/.myenv/*
 !/.iterm2/
 !/.iterm2/*
 !/.screenlayout/
