--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 #registry = http://npm.stdyun.com/
-registry=https://registry.npm.taobao.org
+#registry=https://registry.npm.taobao.org	# NOT maintained anymore
+registry=https://registry.npmmirror.com
