update from lapmac2

--- a/.iterm2/com.googlecode.iterm2.plist
+++ b/.iterm2/com.googlecode.iterm2.plist
@@ -1208,7 +1208,7 @@
 			<key>Send Code When Idle</key>
 			<false/>
 			<key>Set Local Environment Vars</key>
-			<true/>
+			<integer>2</integer>
 			<key>Shortcut</key>
 			<string></string>
 			<key>Silence Bell</key>
